# convergence-program-library

./: .env  .env.sample  .gitignore  .prettierignore  Anchor.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  autodoc.config.json  package-lock.json  package.json  rce  tsconfig.build.json  tsconfig.json
.autodoc/: .gitignore
docs/: index.html  modules.html
hxro-instrument/program/: Cargo.toml
hxro-instrument/program/src/: custom_data_types.rs  errors.rs  helpers.rs  lib.rs  params.rs  state.rs
hxro-instrument/program/src/helpers/: mod.rs  print_trade_creation.rs  print_trade_settlement.rs  validation.rs
hxro-print-trade-provider/dex/: Cargo.toml
hxro-print-trade-provider/dex/src/: error.rs  lib.rs
hxro-print-trade-provider/dex/src/processor/: cancel_order.rs  change_authority.rs  consume_orderbook_events.rs  initialize_combo.rs  initialize_market_product.rs  initialize_market_product_group.rs  new_order.rs  remove_market_product.rs  sweep_fees.rs  transfer_full_position.rs  update_product_funding.rs  update_trader_funding.rs  withdraw_funds.rs
hxro-print-trade-provider/dex/src/state/: callback_info.rs  constants.rs  enums.rs  fee_model.rs  market_product_group.rs  mod.rs  open_orders.rs  print_trade.rs  products.rs  risk_engine_register.rs  trader_risk_group.rs
hxro-print-trade-provider/dex/src/utils/: bitset.rs  cpi.rs  mod.rs  param.rs
hxro-print-trade-provider/program/: Cargo.toml
hxro-print-trade-provider/program/src/: constants.rs  errors.rs  lib.rs  state.rs
hxro-print-trade-provider/program/src/helpers/: close_print_trade.rs  common.rs  conversions.rs  create_print_trade.rs  execute_print_trade.rs  initialize_trader_risk_group.rs  lock_collateral.rs  mod.rs  print_trade_creation.rs  print_trade_settlement.rs  sign_print_trade.rs  validation.rs
infra/: build-solita.sh  sync.sh
lib/: README.md  helpers.ts
programs/rfq/: Cargo.toml
programs/rfq/src/: access_controls.rs  common.rs  constants.rs  contexts.rs  errors.rs  instructions.rs  lib.rs  states.rs  utils.rs
programs/rfq/src/instructions/: mint.rs  mod.rs
programs/rfq/src/instructions/collateral/: fund_collateral.rs  initialize_collateral.rs  mod.rs
programs/rfq/src/instructions/protocol/: add_instrument.rs  initialize_protocol.rs
programs/rfq/src/instructions/rfq/: clean_up_response.rs  clean_up_rfq.rs  confirm_response.rs  intitialize_rfq.rs  mod.rs  prepare_to_settle.rs  respond_to_rfq.rs  revert_preparation.rs  settle.rs  settle_both_party_default_collateral.rs  settle_one_party_default.rs  settle_one_party_default_collateral.rs  unlock_response_collateral.rs  unlock_rfq_collateral.rs
programs/rfq/src/interfaces/: instrument.rs  mod.rs  risk_engine.rs
programs/rfq/src/psyoptions/: contexts.rs  instructions.rs  mod.rs
programs/risk-engine/: Cargo.toml
programs/risk-engine/src/: lib.rs
psyoptions-american-instrument/program/: Cargo.toml
psyoptions-american-instrument/program/src/: american_options.rs  errors.rs  instructions.rs  lib.rs  psyoptions_american.rs  state.rs
psyoptions-european-instrument/program/: Cargo.toml
psyoptions-european-instrument/program/src/: errors.rs  euro_options.rs  lib.rs  state.rs
rfq/program/: Cargo.toml
rfq/program/src/: common.rs  constants.rs  errors.rs  lib.rs  seeds.rs  states.rs  utils.rs
rfq/program/src/instructions/: mod.rs
rfq/program/src/instructions/collateral/: fund_collateral.rs  initialize_collateral.rs  mod.rs  withdraw_collateral.rs
rfq/program/src/instructions/protocol/: add_base_asset.rs  add_instrument.rs  add_print_trade_provider.rs  add_user_asset.rs  change_base_asset_parameters.rs  change_protocol_fees.rs  close_protocol_state.rs  initialize_protocol.rs  mod.rs  register_mint.rs  set_base_asset_enabled_status.rs  set_instrument_enabled_status.rs
rfq/program/src/instructions/rfq/: add_legs_to_rfq.rs  cancel_response.rs  cancel_rfq.rs  clean_up_print_trade.rs  clean_up_response.rs  clean_up_response_escrow_legs.rs  clean_up_response_legs.rs  clean_up_rfq.rs  confirm_response.rs  create_rfq.rs  execute_print_trade_settlement.rs  expire_settlement.rs  finalize_rfq_construction.rs  intitialize_rfq.rs  mod.rs  partially_settle_escrow_legs.rs  partially_settle_legs.rs  partly_revert_escrow_settlement_preparation.rs  partly_revert_settlement_preparation.rs  prepare_escrow_settlement.rs  prepare_more_escrow_legs_settlement.rs  prepare_more_legs_settlement.rs  prepare_print_trade_settlement.rs  prepare_settlement.rs  respond_to_rfq.rs  revert_escrow_settlement_preparation.rs  revert_preparation.rs  revert_print_trade_settlement_preparation.rs  revert_settlement_preparation.rs  settle.rs  settle_escrow.rs  settle_one_party_default.rs  settle_print_trade.rs  settle_two_party_default.rs  unlock_response_collateral.rs  unlock_rfq_collateral.rs  validate_rfq_by_print_trade_provider.rs
rfq/program/src/instructions/whitelist/: add_address_to_whitelist.rs  cleanup_whitelist.rs  create_whitelist.rs  mod.rs  remove_address_from_whitelist.rs
rfq/program/src/interfaces/: instrument.rs  mod.rs  print_trade_provider.rs  risk_engine.rs
rfq/program/src/state/: collateral.rs  mod.rs  protocol.rs  response.rs  rfq.rs  whitelist.rs
risk-engine/program/: Cargo.toml
risk-engine/program/src/: base_asset_extractor.rs  black_scholes.rs  errors.rs  fraction.rs  lib.rs  price_extractor.rs  risk_calculator.rs  scenarios.rs  state.rs  utils.rs
scripts/: calculate_deployment_cost.sh
sdk/: README.md  package.json
spot-instrument/program/: Cargo.toml
spot-instrument/program/src/: errors.rs  lib.rs  state.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-9KHRzoakv2ja266udRsi8TM5wSzzYcw44bbeMuA3Qk5h.tar.bz2  snapshot-600-CgnoVa59ZzRQdo9cQpZtLaNThvYdPFyBPVVLck1GnMmG.tar.bz2  snapshot-700-AMaxSykxKXXgM4PfAtU7dpV8yW4hkcAkC4uk5Rpifwiy.tar.bz2  validator-keypair.json  (+2 more)
tests/programs/failing-instrument/: Cargo.toml
tests/programs/failing-instrument/src/: errors.rs  lib.rs  state.rs
vault-operator/program/: Cargo.toml
vault-operator/program/src/: errors.rs  lib.rs  seeds.rs  state.rs
(+475 files in other folders)
