[workspace]
members = [
    "rfq/program",
    "risk-engine/program",
    "spot-instrument/program",
    "psyoptions-american-instrument/program",
    "psyoptions-european-instrument/program",
    "hxro-print-trade-provider/program",
    "vault-operator/program",
]

[profile.release]
overflow-checks = true
