[package]
name = "hxro-instrument"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hxro_instrument"

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
dex-cpi = { path="../dex-cpi", features=["cpi"] }
risk-cpi = { path="../risk-cpi", features=["cpi"] }
rfq = { path = "../../rfq/program", features = ["no-entrypoint"] }
borsh = "0.9.3"
