[package]
name = "hxro-print-trade-provider"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hxro_print_trade_provider"

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
dex-cpi = { path = "../dex-cpi", features = ["cpi"] }
risk-cpi = { path = "../risk-cpi", features = ["cpi"] }
rfq = { path = "../../rfq/program", features = ["no-entrypoint"] }
borsh = "0.9.3"
