[package]
name = "rfq"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "rfq"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.18.2"
anchor-spl = "0.23.0"
solana-program = "1.8.16"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
psy_american = { path = "../psy_american", features = ["cpi"] }
