[package]
name = "rfq"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "rfq"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.9.13"
num-traits = "0.2.14"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
psy_american = { version = "0.2.6", features = ["cpi"] }

[profile.release]
overflow-checks = true