[package]
name = "risk-engine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_engine"

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
rfq = { path = "../rfq", features = ["no-entrypoint"] }
