[package]
name = "psyoptions-american-instrument"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyoptions_american_instrument"

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
rfq = { path = "../../rfq/program", features = ["no-entrypoint"] }
shank = "0.0.8"
