[package]
name = "rfq"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "rfq"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
num-traits = "0.2.14"
solana-program = "1.9.13"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-security-txt = "1.0.1"
shank = "0.0.8"
