[package]
name = "risk-engine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_engine"

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
rfq = { path = "../../rfq/program", features = ["no-entrypoint"] }
switchboard-v2 = { version = "^0.1.14", features = ["devnet"] }
shank = "0.0.8"
borsh = { version = "0.9.1", features = ["const-generics"] }

[dev-dependencies]
float-cmp = "0.9.0"
