[package]
name = "risk-engine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_engine"

[features]
no-entrypoint = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
rfq = { path = "../../rfq/program", features = ["no-entrypoint"] }
switchboard-solana = "0.27.0"
pyth-sdk-solana = "0.7.2"
shank = "0.0.8"
borsh = { version = "0.9.1", features = ["const-generics"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }

[dev-dependencies]
float-cmp = "0.9.0"
