[package]
name = "risk-engine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "risk_engine"

[features]
no-entrypoint = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
rfq = { path = "../../rfq/program", features = ["no-entrypoint"] }
