[package]
name = "failing-instrument"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "failing_instrument"

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
rfq = { path = "../../../rfq/program", features = ["no-entrypoint"] }
